src/resources/css/packlink.css
/* ... */
.pl-table-row-wrapper td {
	border-top: 1px solid #dcdcdc !important;
}

.pl-table-header-wrapper > th:first-child, .pl-table-row-wrapper > td:first-child {
	border-left: 1px solid #dcdcdc !important;
}

.pl-table-header-wrapper > th:last-child, .pl-table-row-wrapper > td:last-child {
	color: #2095F2 !important;
	border-right: 1px solid #dcdcdc !important;
}

.pl-table-row-method-title h2 {
	margin: 0 0 10px 0 !important;
	padding: 0 !important;
	color: #5d5d5d !important;
	font-size: 14px;
	font-weight: bold;
}

.pl-table-row-method-title p {
	margin: 0 !important;
	padding: 0 !important;
	color: #5d5d5d !important;
	font-size: 10px;
}

.pl-table-row-method-select, .pl-table-row-method-select *, .pl-table-row-method-logo,
.pl-table-row-method-delivery-type, .pl-table-row-method-type,
.pl-table-header-select, .pl-table-header-transit, .pl-table-header-carrier,
.pl-table-header-type, .pl-table-header-origin, .pl-table-header-destination {
	text-align: center !important;
}

.pl-tbody tr:last-child td {
	border-bottom: 1px solid #dcdcdc !important;
}

.pl-tbody tr,
.pl-tbody td {
	border-collapse: separate;
}

.pl-price-indicator {
	display: none;
}

.pl-price-indicator.selected {
	display: block;
}

.pl-method-logo {
	max-height: 40px;
	max-width: 130px;
}

.pl-method-pudo-icon-wrapper {
	text-align: center !important;
	color: #5d5d5d !important;
	font-size: 10px !important;
	max-width: 110px;
	line-height: 15px;
}

.pl-method-pudo-icon-wrapper .pl-pudo-pickup {
	display: none;
}

.pl-method-pudo-icon-wrapper.pl-pickup .pl-pudo-dropoff {
	display: none;
}

.pl-method-pudo-icon-wrapper.pl-pickup .pl-pudo-pickup {
	display: block;
}

.pl-pudo-pickup svg {
	display: block;
	margin: auto;
}

.pl-pudo-dropoff svg {
	display: block;
	margin: auto;
}

.pl-table-row-arrow-wrapper {
	padding-right: 0 !important;
	width: 80px !important;
}

.pl-table-row-arrow svg {
	fill: #2095F2 !important;
	padding-left: 20px;
}

.pl-dashboard-modal-wrapper {
	position: absolute;
	top: -20px;
	bottom: 0;
	left: 0;
	right: 0;
	padding: 20px;
	background-color: rgba(0, 0, 0, 0.4);
	z-index: 450;
	display: flex;
	align-items: center;
	justify-content: center;
}

.pl-dashboard-modal-wrapper.hidden {
	display: none !important;
}

.pl-dashboard-modal {
	background: white;
	color: #d5d5d5;
	display: flex;
	flex-flow: column;
	align-items: center;
	padding: 20px 70px;
	border-radius: 5px;
	position: relative;
	margin: 0 auto;
}

.pl-disable-methods-modal {
	position: absolute;
	max-width: 550px;
	height: 230px;
	border-radius: 5px;
	border: 1px #d5d5d5 solid;
	box-sizing: border-box;
	padding: 20px 70px;
}

.pl-configure-shipping-method-wrapper {
	padding: 0 !important;
	box-sizing: content-box;
}

.pl-configure-shipping-method-wrapper td {
	padding: 0 !important;
	box-sizing: border-box;
	background-color: #f5f5f5 !important;
	position: relative;
	z-index: 200;
	animation: pl-fade-in 0.5s ease;
	border: 1px solid #2095F2 !important;
}

.pl-configure-shipping-method-form-wrapper {
	padding: 20px 20px 0 20px !important;
	border-bottom: 1px solid #dcdcdc;
}

.pl-configure-shipping-method-form-wrapper:after,
.pl-configure-shipping-method-form-wrapper:before {
	content: '';
	display: block;
	position: absolute;
	left: 100%;
	width: 0;
	height: 0;
	border-style: solid;
	z-index: 1 !important;
}

.pl-configure-shipping-method-form-wrapper:after {
	top: -19px;
	left: 15%;
	border-color: transparent transparent #f5f5f5 transparent;
	border-width: 10px;
}

.pl-configure-shipping-method-form-wrapper:before {
	top: -22px;
	left: calc(15% - 1px);
	border-color: transparent transparent #2095F2 transparent;
	border-width: 11px;
}

.pl-shipping-method-form {
	padding: 0 !important;
}

.pl-form-section-wrapper {
	padding: 0 0 30px 0 !important;
	box-sizing: border-box;
	width: 49%;
	display: inline-table;
}

.pl-shipping-method-form > div:nth-child(1) {
	padding-right: 10px !important;
}

.pl-shipping-method-form > div:nth-child(2) {
	padding-left: 10px !important;
}

.pl-form-section-title-wrapper {
	padding: 0 !important;
	height: 20px !important;
	line-height: 20px !important;
	margin-bottom: 20px;
}

.pl-configure-shipping-method-button-wrapper {
	text-align: right;
	padding: 10px 20px !important;
}

.pl-configure-shipping-method-button-wrapper button {
	margin: 0 0 0 15px !important;
}

.pl-form-section-title-wrapper {
	display: flex;
}

.pl-form-section-title {
	height: 20px;
	line-height: 20px;
	font-size: 16px;
	color: #5d5d5d;
}

.pl-form-section-title-line {
	height: 20px;
	padding-top: 10px;
	padding-left: 10px;
	flex-grow: 1;
}

.pl-form-section-title-line hr {
	border-color: #dcdcdc !important;
	margin: 0 !important;
	padding: 0 !important;
}

.pl-form-selection-help-button-wrapper {
	margin: 0 !important;
	padding: 0 !important;
	height: 20px;
	width: 20px;
	text-align: center;
	line-height: 20px;
	color: #2095F2;
	border: 1px solid #2095F2;
	border-radius: 50%;
	cursor: pointer !important;
}

.pl-tooltip {
	position: relative;
	display: inline-block;
}

.pl-tooltip:hover .pl-tooltip-concrete {
	visibility: visible !important;
	opacity: 1 !important;
}

.pl-tooltip-concrete {
	box-sizing: border-box;
	width: 140px;
	padding: 15px;
	position: absolute;
	background-color: white;
	color: #5d5d5d;
	font-size: 12px !important;
	line-height: 14px !important;
	font-weight: normal;
	text-align: left !important;
	border-radius: 3px;
	border: 1px solid #dcdcdc;
	z-index: 1;
	visibility: hidden;
	opacity: 0;
	transition: visibility 0.3s linear, opacity 0.3s linear;
}

.pl-tooltip-left {
	top: 50%;
	transform: translateY(-50%);
	bottom: auto;
	left: -155px;
}

.pl-tooltip-left:before,
.pl-tooltip-left:after {
	content: '';
	display: block;
	position: absolute;
	left: 100%;
	width: 0;
	height: 0;
	border-style: solid;
}

.pl-tooltip-left:after {
	top: calc(50% - 5px);
	border-color: transparent transparent transparent white;
	border-width: 6px;
}
/* ... */

